--- a/product.html
+++ b/product.html
@@ -183,7 +183,7 @@
 									<a href="index.html">Home</a>
 								</li>
 								<li>
-									<a href="demo24-shop.html">BABY BOY</a>
+									<a href="shop.html">BABY BOY</a>
 									<div class="megamenu">
 										<div class="row">
 											<div class="col-4 col-sm-4 col-md-4 col-lg-4" style="border-right: 1px solid gray;">
@@ -253,7 +253,7 @@
 													</h4>
 													<h3 class="banner-title font-weight-bold"><span class="text-uppercase">Up
 															to</span>70% Off</h3>
-													<a href="demo24-shop.html" class="btn btn-link btn-underline">shop
+													<a href="shop.html" class="btn btn-link btn-underline">shop
 														now<i class="d-icon-arrow-right"></i></a>
 												</div>
 											</div>
@@ -262,7 +262,7 @@
 									</div>
 								</li>
 								<li>
-									<a href="demo24-shop.html">BABY GIRL</a>
+									<a href="shop.html">BABY GIRL</a>
 									<div class="megamenu">
 										<div class="row">
 											<div class="col-4 col-sm-4 col-md-4 col-lg-4" style="border-right: 1px solid gray;">
@@ -332,7 +332,7 @@
 													</h4>
 													<h3 class="banner-title font-weight-bold"><span class="text-uppercase">Up
 															to</span>70% Off</h3>
-													<a href="demo24-shop.html" class="btn btn-link btn-underline">shop
+													<a href="shop.html" class="btn btn-link btn-underline">shop
 														now<i class="d-icon-arrow-right"></i></a>
 												</div>
 											</div>
@@ -341,7 +341,7 @@
 									</div>
 								</li>
 								<li>
-									<a href="demo24-shop.html">BABY NEUTRAL</a>
+									<a href="shop.html">BABY NEUTRAL</a>
 									<div class="megamenu">
 										<div class="row">
 											<div class="col-3 col-sm-3 col-md-3 col-lg-3" style="border-right: 1px solid gray;">
@@ -411,7 +411,7 @@
 													</h4>
 													<h3 class="banner-title font-weight-bold"><span class="text-uppercase">Up
 															to</span>70% Off</h3>
-													<a href="demo24-shop.html" class="btn btn-link btn-underline">shop
+													<a href="shop.html" class="btn btn-link btn-underline">shop
 														now<i class="d-icon-arrow-right"></i></a>
 												</div>
 											</div>
@@ -420,7 +420,7 @@
 									</div>
 								</li>
 								<li>
-									<a href="demo24-shop.html">TODDLER BOY</a>
+									<a href="shop.html">TODDLER BOY</a>
 									<div class="megamenu">
 										<div class="row">
 											<div class="col-4 col-sm-4 col-md-4 col-lg-4" style="border-right: 1px solid gray;">
@@ -491,7 +491,7 @@
 													</h4>
 													<h3 class="banner-title font-weight-bold"><span class="text-uppercase">Up
 															to</span>70% Off</h3>
-													<a href="demo24-shop.html" class="btn btn-link btn-underline">shop
+													<a href="shop.html" class="btn btn-link btn-underline">shop
 														now<i class="d-icon-arrow-right"></i></a>
 												</div>
 											</div>
@@ -997,7 +997,7 @@
                                         <h3 class="banner-title ls-m text-uppercase font-weight-bold">New Lifestyle<span
                                                 class="d-block ls-s text-normal">Collection</span>
                                         </h3>
-                                        <a href="demo24-shop.html" class="btn btn-sm btn-solid btn-rounded">Shop now</a>
+                                        <a href="shop.html" class="btn btn-sm btn-solid btn-rounded">Shop now</a>
                                     </div>
                                 </div>
                             </div> -->
@@ -1200,31 +1200,10 @@
 						</div>
 						<div class="col-lg-3 col-sm-6">
 							<div class="widget widget-instagram">
-								<h4 class="widget-title">Instagram</h4>
+								<h4 class="widget-title">coming-soon</h4>
 								<figure class="widget-body row">
-									<div class="col-3">
-										<img src="images/instagram/01.jpg" alt="instagram 1" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/02.jpg" alt="instagram 2" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/03.jpg" alt="instagram 3" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/04.jpg" alt="instagram 4" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/05.jpg" alt="instagram 5" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/06.jpg" alt="instagram 6" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/07.jpg" alt="instagram 7" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/08.jpg" alt="instagram 8" width="64" height="64" />
+									<div class="col-12">
+										<img src="images/demos/demo24/goolge-apple.png" alt="instagram 2" style="height: 100px;" />
 									</div>
 								</figure>
 							</div>
@@ -1261,7 +1240,7 @@
 			<i class="d-icon-home"></i>
 			<span>Home</span>
 		</a>
-		<a href="demo24-shop.html" class="sticky-link">
+		<a href="shop.html" class="sticky-link">
 			<i class="d-icon-volume"></i>
 			<span>Categories</span>
 		</a>
@@ -1360,7 +1339,7 @@
 					<a href="index.html">Home</a>
 				</li>
 				<li>
-					<a href="demo24-shop.html">Categories</a>
+					<a href="shop.html">Categories</a>
 					<ul>
 						<li>
 							<a href="#">
