--- a/shop.html
+++ b/shop.html
@@ -43,7 +43,7 @@
 
 <body>
 	<div class="page-wrapper">
-		<header class="header" style="font-family: 'Roboto Slab', serif;">
+		<header class="header">
 			<div class="header-middle has-center">
 				<div class="container">
 					<div class="header-left">
