--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@
                         <div class="col-lg-3 col-sm-6">
                             <div class="widget widget-about">
                                 <a href="demo24.html" class="logo-footer">
-                                    <img src="images/demos/demo24/logo-footer.png" alt="logo-footer" width="154"
+                                    <img src="images/demos/demo24/owlet-footer.PNG" alt="logo-footer" width="154"
                                         height="43" />
                                 </a>
                                 <div class="widget-contact-info widget-collapsible">
