--- a/shop.html
+++ b/shop.html
@@ -1090,7 +1090,7 @@
 					<div class="row align-items-center">
 						<div class="col-lg-3">
 							<a href="demo1.html" class="logo-footer">
-								<img src="images/logo-footer.png" alt="logo-footer" width="154" height="43" />
+								<img src="images/demos/demo24/owlet-footer.PNG" alt="logo-footer" width="154" height="43" />
 							</a>
 							<!-- End FooterLogo -->
 						</div>
@@ -1186,33 +1186,12 @@
 							</div>
 							<!-- End Widget -->
 						</div>
-						<div class="col-lg-3 col-md-6">
+						<div class="col-lg-3 col-sm-6">
 							<div class="widget widget-instagram">
-								<h4 class="widget-title">Instagram</h4>
+								<h4 class="widget-title">coming-soon</h4>
 								<figure class="widget-body row">
-									<div class="col-3">
-										<img src="images/instagram/01.jpg" alt="instagram 1" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/02.jpg" alt="instagram 2" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/03.jpg" alt="instagram 3" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/04.jpg" alt="instagram 4" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/05.jpg" alt="instagram 5" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/06.jpg" alt="instagram 6" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/07.jpg" alt="instagram 7" width="64" height="64" />
-									</div>
-									<div class="col-3">
-										<img src="images/instagram/08.jpg" alt="instagram 8" width="64" height="64" />
+									<div class="col-12">
+										<img src="images/demos/demo24/goolge-apple.png" alt="instagram 2" style="height: 100px;" />
 									</div>
 								</figure>
 							</div>
