--- a/product.html
+++ b/product.html
@@ -1118,11 +1118,10 @@
 			<div class="container">
 				<div class="footer-middle">
 					<div class="row">
-						<div class="col-lg-3 col-sm-6">
+						<div class="col-lg-4 col-md-4">
 							<div class="widget widget-about">
-								<a href="index.html" class="logo-footer">
-									<img src="images/demos/demo24/owlet-footer.PNG" alt="logo-footer" width="154"
-										height="43" />
+								<a href="demo24.html" class="logo-footer">
+									<img src="images/demos/demo24/owlet-footer.PNG" alt="logo-footer" width="154" height="43" />
 								</a>
 								<div class="widget-contact-info widget-collapsible">
 									<ul class="contact-info">
@@ -1140,7 +1139,7 @@
 							</div>
 							<!-- End Widget -->
 						</div>
-						<div class="col-lg-3 col-sm-6">
+						<div class="col-lg-4 col-md-4">
 							<div class="widget widget-info">
 								<h4 class="widget-title">About Us</h4>
 								<ul class="widget-body">
@@ -1163,7 +1162,7 @@
 							</div>
 							<!-- End Widget -->
 						</div>
-						<div class="col-lg-3 col-sm-6">
+						<div class="col-lg-4 col-md-4">
 							<div class="widget widget-service">
 								<h4 class="widget-title">Customer Service</h4>
 								<ul class="widget-body">
@@ -1186,17 +1185,7 @@
 							</div>
 							<!-- End Widget -->
 						</div>
-						<div class="col-lg-3 col-sm-6">
-							<div class="widget widget-instagram">
-								<h4 class="widget-title">coming-soon</h4>
-								<figure class="widget-body row">
-									<div class="col-12">
-										<img src="images/demos/demo24/goolge-apple.png" alt="instagram 2" style="height: 100px;" />
-									</div>
-								</figure>
-							</div>
-							<!-- End Instagram -->
-						</div>
+		
 					</div>
 				</div>
 				<!-- End FooterMiddle -->
@@ -1212,7 +1201,7 @@
 					<div class="footer-right">
 						<div class="social-links">
 							<a href="#" class="social-link social-facebook fab fa-facebook-f"></a>
-							<a href="#" class="social-link social-twitter fab fa-twitter"></a>
+							<!-- <a href="#" class="social-link social-twitter fab fa-twitter"></a> -->
 							<a href="#" class="social-link social-linkedin fab fa-linkedin-in"></a>
 						</div>
 					</div>
