--- a/product.html
+++ b/product.html
@@ -39,6 +39,7 @@
 
 	<!-- Main CSS File -->
 	<link rel="stylesheet" type="text/css" href="css/demo24.min.css">
+			<link rel="stylesheet" type="text/css" href="css/custom.css">
 </head>
 
 <body>
