--- a/product.html
+++ b/product.html
@@ -56,7 +56,7 @@
 						<div class="header-search hs-simple d-lg-show" style="max-width: 300px;">
 							<form action="#" class="input-wrapper">
 								<input type="text" class="form-control" name="search" autocomplete="off" placeholder="Search..."
-									required />
+									required style="border-radius: 25px;"/>
 								<button class="btn btn-search" type="submit">
 									<i class="d-icon-search"></i>
 								</button>
@@ -667,13 +667,13 @@
 									BRAND: <span class="product-brand">The Northland</span>
 								</div>
 								<div class="product-price">$139.00</div>
-								<div class="ratings-container">
+								<!-- <div class="ratings-container">
 									<div class="ratings-full">
 										<span class="ratings" style="width:80%"></span>
 										<span class="tooltiptext tooltip-top"></span>
 									</div>
 									<a href="#product-tab-reviews" class="link-to-tab rating-reviews">( 6 reviews )</a>
-								</div>
+								</div> -->
 								<p class="product-short-desc">Sed egestas, ante et vulputate volutpat, eros pede semper
 									est, vitae luctus metus libero eu augue. Morbi purus liberpuro ate vol faucibus
 									adipiscing. Sed lectus te et vulputate aucibus adipiscing. Sed lectus. us
@@ -742,19 +742,7 @@
 						</div>
 					</div>
 
-					<div class="tab tab-nav-simple product-tabs">
-						<ul class="nav nav-tabs justify-content-center" role="tablist">
-							<li class="nav-item">
-								<a class="nav-link active" href="#product-tab-description">Description</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#product-tab-shipping-returns">Shipping &amp;
-									Returns</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#product-tab-reviews">Reviews (8)</a>
-							</li>
-						</ul>
+					<div class="tab tab-nav-simple product-tabs" style="border-top: 1px solid gray;">
 						<div class="tab-content">
 							<div class="tab-pane active in" id="product-tab-description">
 								<div class="row mt-6">
@@ -798,6 +786,17 @@
 											</tbody>
 										</table>
 									</div>
+
+
+									<h5 class="description-title mb-3 font-weight-semi-bold ls-m">Shipping & Returns</h5>
+									<h6 class="mb-2">Free Shipping</h6>
+									<p class="mb-0">We deliver to over 100 countries around the world. For full
+										details of the delivery options we offer, please view our <a href="#" class="text-primary">Delivery
+											information</a><br />We hope you’ll
+										love every purchase, but if you ever need to return an item you can do
+										so within a month of receipt. For full details of how to make a return,
+										please view our <br /><a href="#" class="text-primary">Returns
+											information</a></p>
 									<!-- <div class="col-md-6 pl-md-6 pt-4 pt-md-0">
 										<h5 class="description-title font-weight-semi-bold ls-m mb-5">Video Description
 										</h5>
@@ -834,150 +833,8 @@
 									</div> -->
 								</div>
 							</div>
-							<div class="tab-pane " id="product-tab-shipping-returns">
-								<h6 class="mb-2">Free Shipping</h6>
-								<p class="mb-0">We deliver to over 100 countries around the world. For full
-									details of the delivery options we offer, please view our <a href="#"
-										class="text-primary">Delivery information</a><br />We hope you’ll
-									love every purchase, but if you ever need to return an item you can do
-									so within a month of receipt. For full details of how to make a return,
-									please view our <br /><a href="#" class="text-primary">Returns
-										information</a></p>
-							</div>
-							<div class="tab-pane " id="product-tab-reviews">
-								<div class="d-flex align-items-center mb-5">
-									<h4 class="mb-0 mr-2">Average Rating:</h4>
-									<div class="ratings-container average-rating mb-0">
-										<div class="ratings-full">
-											<span class="ratings" style="width:80%"></span>
-											<span class="tooltiptext tooltip-top">4.00</span>
-										</div>
-									</div>
-								</div>
-
-								<div class="comments mb-6">
-									<ul>
-										<li>
-											<div class="comment">
-												<figure class="comment-media">
-													<a href="#">
-														<img src="images/blog/comments/1.jpg" alt="avatar">
-													</a>
-												</figure>
-												<div class="comment-body">
-													<div class="comment-rating ratings-container mb-0">
-														<div class="ratings-full">
-															<span class="ratings" style="width:80%"></span>
-															<span class="tooltiptext tooltip-top">4.00</span>
-														</div>
-													</div>
-													<div class="comment-user">
-														<h4><a href="#">Jimmy Pearson</a></h4>
-														<span class="comment-date">November 9, 2018 at 2:19
-															pm</span>
-													</div>
-
-													<div class="comment-content">
-														<p>Sed pretium, ligula sollicitudin laoreet viverra,
-															tortor libero sodales leo, eget blandit nunc
-															tortor eu nibh. Nullam mollis. Ut justo.
-															Suspendisse potenti.
-															Sed egestas, ante et vulputate volutpat, eros
-															pede semper est, vitae luctus metus libero eu
-															augue. Morbi purus libero, faucibus adipiscing,
-															commodo quis, avida id, est. Sed lectus.
-															Praesent elementum hendrerit tortor. Sed semper
-															lorem at felis. Vestibulum volutpat.</p>
-													</div>
-												</div>
-											</div>
-										</li>
-										<li>
-											<div class="comment">
-												<figure class="comment-media">
-													<a href="#">
-														<img src="images/blog/comments/3.jpg" alt="avatar">
-													</a>
-												</figure>
-
-												<div class="comment-body">
-													<div class="comment-rating ratings-container mb-0">
-														<div class="ratings-full">
-															<span class="ratings" style="width:80%"></span>
-															<span class="tooltiptext tooltip-top">4.00</span>
-														</div>
-													</div>
-													<div class="comment-user">
-														<h4><a href="#">Johnathan Castillo</a></h4>
-														<span class="comment-date">November 9, 2018 at 2:19
-															pm</span>
-													</div>
-
-													<div class="comment-content">
-														<p>Vestibulum volutpat, lacus a ultrices sagittis,
-															mi neque euismod dui, eu pulvinar nunc sapien
-															ornare nisl. Phasellus pede arcu, dapibus eu,
-															fermentum et, dapibus sed, urna.</p>
-													</div>
-												</div>
-											</div>
-										</li>
-									</ul>
-								</div>
-								<!-- End Comments -->
-								<div class="reply">
-									<div class="title-wrapper text-left">
-										<h3 class="title title-simple text-left text-normal">Add a Review
-										</h3>
-										<p>Your email address will not be published. Required fields are
-											marked *</p>
-									</div>
-									<div class="rating-form">
-										<label for="rating">Your rating: </label>
-										<span class="rating-stars selected">
-											<a class="star-1" href="#">1</a>
-											<a class="star-2" href="#">2</a>
-											<a class="star-3" href="#">3</a>
-											<a class="star-4 active" href="#">4</a>
-											<a class="star-5" href="#">5</a>
-										</span>
-
-										<select name="rating" id="rating" required="" style="display: none;">
-											<option value="">Rate…</option>
-											<option value="5">Perfect</option>
-											<option value="4">Good</option>
-											<option value="3">Average</option>
-											<option value="2">Not that bad</option>
-											<option value="1">Very poor</option>
-										</select>
-									</div>
-									<form action="#">
-										<textarea id="reply-message" cols="30" rows="4" class="form-control mb-4"
-											placeholder="Comment *" required></textarea>
-										<div class="row">
-											<div class="col-md-6 mb-5">
-												<input type="text" class="form-control" id="reply-name"
-													name="reply-name" placeholder="Name *" required />
-											</div>
-											<div class="col-md-6 mb-5">
-												<input type="email" class="form-control" id="reply-email"
-													name="reply-email" placeholder="Email *" required />
-											</div>
-										</div>
-										<div class="form-checkbox mb-4">
-											<input type="checkbox" class="custom-checkbox" id="signin-remember"
-												name="signin-remember" />
-											<label class="form-control-label" for="signin-remember">
-												Save my name, email, and website in this browser for the next time I
-												comment.
-											</label>
-										</div>
-										<button type="submit" class="btn btn-primary btn-md">Submit<i
-												class="d-icon-arrow-right"></i></button>
-									</form>
-								</div>
-								<!-- End Reply -->
-							</div>
+						
+			
 						</div>
 					</div>
 
