--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <h1 class="d-none">Riode - Responsive eCommerce HTML Template</h1>
         <header class="header">
             <div class="text-center" style="background-color: #f9b96a;">
-                <div class="container alert alert-dark border-no font-primary font-weight-semi-bold text-dark justify-content-center pl-10 pr-8">
+                <div class="container alert alert-dark border-no font-primary text-dark justify-content-center" style="padding-top: 2px; padding-bottom: 2px;">
                     Get Up to 40% OFF in this summer
                     <button type="button" class="btn btn-link btn-close">
                         <i class="d-icon-times"></i>
