--- a/product.html
+++ b/product.html
@@ -69,7 +69,7 @@
 					</div>
 					<div class="header-center">
 						<a href="index.html" class="logo mr-0">
-							<img src="images/demos/demo24/owlet.png" alt="logo" width="154" height="43" />
+							<img src="images/demos/demo24/owlet.svg" alt="logo" width="154" height="43" />
 						</a>
 						<!-- End Logo -->
 					</div>
@@ -174,7 +174,7 @@
 				<div class="container">
 					<div class="header-left">
 						<a href="index.html" class="logo mr-0">
-							<img src="images/demos/demo24/owlet.png" alt="logo" width="107" height="24" />
+							<img src="images/demos/demo24/owlet.svg" alt="logo" width="107" height="24" />
 						</a>
 					</div>
 					<div class="header-center">
