--- a/checkout.html
+++ b/checkout.html
@@ -898,7 +898,7 @@
 							<div class="col-lg-4 col-md-4">
 								<div class="widget widget-about">
 									<a href="demo24.html" class="logo-footer">
-										<img src="images/demos/demo24/owlet-footer.PNG" alt="logo-footer" width="154" height="43" />
+										<img src="images/demos/demo24/owlet.svg" alt="logo-footer" width="154" height="43" />
 									</a>
 									<div class="widget-contact-info widget-collapsible">
 										<ul class="contact-info">
