--- a/shop.html
+++ b/shop.html
@@ -607,7 +607,7 @@
 					<div class="row gutter-lg">
 						<aside class="col-lg-3 sidebar sidebar-fixed shop-sidebar sticky-sidebar-wrapper">
 							<div class="sidebar-overlay"></div>
-							<a href="#" class="sidebar-toggle btn" style="padding: 10px; height: 70px; width: 70px;">
+							<a href="#" class="sidebar-toggle" style="border: 1px solid white; padding: 5px;">
 									<img src="images/demos/demo24/filter1.png" alt="logo" />
 							</a>
 							<!-- <a href="#" class="sidebar-toggle" style="border: 1px solid white;"><i class="fas fa-chevron-right"></i><i class="fas fa-chevron-right"></i></a> -->
