--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div class="header-search hs-simple d-lg-show">
                             <form action="#" class="input-wrapper">
                                 <input type="text" class="form-control" name="search" autocomplete="off"
-                                    placeholder="Search..." required style="border-radius: 25px; border: 1px solid #f26b3c;" />
+                                    placeholder="Search..." required />
                                 <button class="btn btn-search" type="submit">
                                     <i class="d-icon-search"></i>
                                 </button>
@@ -285,7 +285,7 @@
                                 <a href="about-us.html">ABOUT US</a>
                             </li>
                             <li>
-                                <a href="https://d-themes.com/buynow/riodehtml" style="color:#3792a7">HOT DEAL!</a>
+                                <a href="https://d-themes.com/buynow/riodehtml" class="hot-deal">HOT DEAL!</a>
                             </li>
                         </ul>
                     </nav>
