ability to change color of sticky-footer independantly

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
 <body>
     <!--Start of Tawk.to Script-->
-    <script type="text/javascript">
+    <!-- <script type="text/javascript">
         var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
         (function () {
             var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
@@ -53,7 +53,7 @@
             s1.setAttribute('crossorigin', '*');
             s0.parentNode.insertBefore(s1, s0);
         })();
-    </script>
+    </script> -->
     <!--End of Tawk.to Script-->
 
     <div class="page-wrapper">
@@ -929,24 +929,24 @@
 
     <!-- Sticky Footer -->
     <div class="sticky-footer sticky-content fix-bottom">
-        <a href="demo24.html" class="sticky-link active">
+        <a href="demo24.html" class="sticky-link home">
             <i class="d-icon-home"></i>
             <span>Home</span>
         </a>
-        <a href="demo24-shop.html" class="sticky-link">
+        <a href="demo24-shop.html" class="sticky-link category">
             <i class="d-icon-volume"></i>
             <span>Categories</span>
         </a>
-        <a href="wishlist.html" class="sticky-link">
+        <a href="wishlist.html" class="sticky-link wishlist">
             <i class="d-icon-heart"></i>
             <span>Wishlist</span>
         </a>
-        <a href="account.html" class="sticky-link">
+        <a href="account.html" class="sticky-link account">
             <i class="d-icon-user"></i>
             <span>Account</span>
         </a>
         <div class="header-search hs-toggle dir-up">
-            <a href="#" class="search-toggle sticky-link">
+            <a href="#" class="search-toggle sticky-link search">
                 <i class="d-icon-search"></i>
                 <span>Search</span>
             </a>
