--- a/shop.html
+++ b/shop.html
@@ -897,24 +897,24 @@
 	</div>
 	<!-- Sticky Footer -->
 	<div class="sticky-footer sticky-content fix-bottom">
-		<a href="demo1.html" class="sticky-link active">
+		<a href="demo24.html" class="sticky-link home">
 			<i class="d-icon-home"></i>
 			<span>Home</span>
 		</a>
-		<a href="shop.html" class="sticky-link">
+		<a href="demo24-shop.html" class="sticky-link category">
 			<i class="d-icon-volume"></i>
 			<span>Categories</span>
 		</a>
-		<a href="wishlist.html" class="sticky-link">
+		<a href="wishlist.html" class="sticky-link wishlist">
 			<i class="d-icon-heart"></i>
 			<span>Wishlist</span>
 		</a>
-		<a href="account.html" class="sticky-link">
+		<a href="account.html" class="sticky-link account">
 			<i class="d-icon-user"></i>
 			<span>Account</span>
 		</a>
 		<div class="header-search hs-toggle dir-up">
-			<a href="#" class="search-toggle sticky-link">
+			<a href="#" class="search-toggle sticky-link search">
 				<i class="d-icon-search"></i>
 				<span>Search</span>
 			</a>
